# ESP32_Modules

./: CMakeLists.txt  I2SModule.cpp  README.md  WifiModule.cpp
include/: I2SModule.h  WifiModule.h
source/: I2SModule.cpp  WifiModule.cpp
